# magnus-extensions

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  release.yaml
argo-executor/: Dockerfile  argo-test.yaml  argo-test1.yaml  config.yaml  getting-started.yaml  pyproject.toml
argo-executor/magnus_extension_argo_executor/: argo_executor.py  node_types.py
aws/: index.html
aws-batch-executor/: Dockerfile  cloud-config.yaml  getting-started.yaml  pyproject.toml
aws-batch-executor/.catalog/20220331142510/: data.txt
aws-batch-executor/.catalog/20220331142546/: data.txt
aws-batch-executor/data/: data.txt
aws-batch-executor/magnus_extension_aws_batch_traverse/: aws_batch_traverse.py  integration.py
aws-config/: README.md  cov.xml  pyproject.toml
aws-config/magnus_extension_aws_config/: aws.py
aws-config/tests/: test_aws.py
aws-sagemaker-executor/: README.md  pyproject.toml
aws-sagemaker-executor/magnus_extension_aws_sagemaker_traverse/: aws_sagemaker_traverse.py
aws-secrets-manager/: pyproject.toml
aws-secrets-manager/magnus_extension_aws_secrets_manager/: aws_secrets_manager.py
aws-step-function-executor/: .coveragerc  example.yaml  pyproject.toml
aws-step-function-executor/magnus_extension_executor_aws_sfn/: sfn.py  states.py
catalog/s3/: index.html
db-datastore/: pyproject.toml
db-datastore/magnus_extension_datastore_db/: base.py  db.py
docs/: aws.md  index.md  installation.md  mkdocs.yml  pyproject.toml
docs/catalog/: s3.md
docs/docs/: index.md
docs/docs/executors/: k8s_poller.md
docs/docs/run_log_store/: s3.md
docs/docs/secrets/: aws_secrets_manager.md
docs/executor/: argo.md  k8s-job.md  kfp.md
docs/run_log_store/: database.md  s3.md
executor/argo/: index.html
executor/k8s-job/: index.html
executor/kfp/: index.html
executors/aws_batch_traverse/: index.html
executors/k8s_poller/: index.html
experiment_tracking/mlflow/: index.html
installation/: index.html
k8s-poller/: Dockerfile  README.md  pyproject.toml
k8s-poller/getting-started/: config.yaml  getting-started.yaml  map.yaml  parameter.yaml
k8s-poller/magnus_extension_k8s_poller/: implementation.py  integration.py
kubeflow/: README.md  pyproject.toml
kubeflow/magnus_extension_kubeflow/: implementation.py  integration.py
magnus_extension_aws_config/: pyproject.toml  tox.ini
magnus_extension_aws_config/tests/: test_aws.py
magnus_extension_catalog_s3/: pyproject.toml
magnus_extension_datastore_db/: db.py  integration.py  pyproject.toml
magnus_extension_datastore_s3/: integration.py  pyproject.toml  s3.py
magnus_extension_executor_aws_batch/: aws_batch_traverse.py  pyproject.toml
magnus_extension_secrets_aws_secrets_manager/: pyproject.toml
magnus_extension_template/: README.md  pyproject.toml
magnus_extensions/: aws.py
magnus_extensions/catalog/k8s_pvc/: implementation.py  integration.py
magnus_extensions/catalog/s3/: implementation.py  integration.py
magnus_extensions/datastore/chunked_k8s_pvc/: implementation.py  integration.py
magnus_extensions/datastore/chunked_s3/: implementation.py  integration.py
magnus_extensions/datastore/db/: implementation.py  integration.py
magnus_extensions/datastore/k8s_pvc/: implementation.py  integration.py
magnus_extensions/datastore/s3/: implementation.py  integration.py
magnus_extensions/executor/argo/: implementation.py  integration.py
magnus_extensions/executor/k8s_job/: implementation.py  integration.py
magnus_extensions/executor/kubeflow/: implementation.py  integration.py
magnus_extensions/executor/slurm/: implementation.py  integration.py
magnus_extensions/executor/slurm_job/: implementation.py  integration.py
magnus_extensions/experiment_tracker/mlflow/: implementation.py
magnus_extensions/magnus_extension_template/: implementation.py  integration.py
magnus_extensions/secrets/aws/: implementation.py  integration.py
paritioned-run-log-store/: README.md  pyproject.toml
paritioned-run-log-store/magnus_extension_partitioned_run_log_store/: __init__.py  implementation.py
partitioned-file-system/: README.md  getting-started.yaml  parameters.yaml  pyproject.toml
partitioned-file-system/.catalog/20220422193521/: data.txt
partitioned-file-system/.catalog/20220422221006/: data.txt
partitioned-file-system/.catalog/20220422221026/: data.txt
partitioned-file-system/.catalog/20220422221549/: data.txt
partitioned-file-system/.catalog/20220422221714/: data.txt
partitioned-file-system/.catalog/20220422221938/: data.txt
partitioned-file-system/.catalog/20220422222727/: data.txt
partitioned-file-system/.catalog/20220422222740/: data.txt
partitioned-file-system/.catalog/20220422223213/: data.txt
partitioned-file-system/.catalog/20220422223230/: data.txt
partitioned-file-system/.catalog/20220426063226/: data.txt
partitioned-file-system/.catalog/20220426084335/: data.txt
partitioned-file-system/.catalog/20220426084407/: data.txt
partitioned-file-system/.run_log_store/: 20220426084407%Parameter%y.json  20220426084407%RunLog%run_log.json  20220426084407%StepLog%step parameters.json  20220426084407%StepLog%step shell.json  20220426084407%StepLog%success.json
partitioned-file-system/magnus_extension_datastore_partitioned_fs/: partitioned_file_system.py
run_log_store/chunked-s3/: index.html
run_log_store/database/: index.html
run_log_store/s3/: index.html
s3-catalog/: .mypy.ini  README.md  pyproject.toml
s3-catalog/magnus_extension_catalog_s3/: s3.py
s3-datastore/: pyproject.toml  tox.ini
s3-datastore/magnus_extension_datastore_s3/: integration.py  s3.py
search/: search_index.json
secrets/aws_secrets_manager/: index.html
template/: pyproject.toml
template/magnus_extension_template/: integration.py
