[tool.poetry]
name = "magnus_extensions"
version = "0"
description = "Extensions to Magnus core"
authors = ["Vijay Vammi <mesanthu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "magnus_extensions"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 ={ version = "*", optional = true }
kfp = {version= "^1.8.18", optional = true }
sqlalchemy = { version = "*", optional = true }
magnus = {version = "^0.4.7"}

[tool.poetry.extras]
aws = ["boto3"]
kubeflow = ["kfp"]
database = ["sqlalchemy"]

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
mkdocs = "*"
mkdocs-material = "*"
mypy = "^0.931"
tox = "^3.24.5"
pre-commit = "*"
commit-linter = "^1.0.2"
python-semantic-release = "^7.33.1"

# Use this section to provide the namespace to extend and implementation
[tool.poetry.plugins."magnus.catalog.BaseCatalog"]
"s3" = "magnus_extensions.catalog.s3.implementation:S3Catalog"

[tool.poetry.plugins."magnus.datastore.BaseRunLogStore"]
"s3" = "magnus_extensions.datastore.s3.implementation:S3Store"
"chunked-s3" = "magnus_extensions.datastore.chunked_s3.implementation:ChunkedS3Store"
"k8s-pvc" = "magnus_extensions.datastore.k8s_pvc.implementation:K8PersistentVolumeRunLogstore"

[tool.poetry.plugins."magnus.secrets.BaseSecrets"]
"aws-secrets-manager" = "magnus_extensions.secrets.aws.implementation:AWSSecretsManager"

[tool.poetry.plugins."magnus.executor.BaseExecutor"]
"kfp" = "magnus_extensions.executor.kubeflow.implementation:KubeFlowExecutor"
"argo" = "magnus_extensions.executor.argo.implementation:ArgoExecutor"

# Use this provide namespace of the integration
# naming convention: {executor.name}-{service}-{service.name}
[tool.poetry.plugins."magnus.integration.BaseIntegration"]
#S3 catalog
"local-container-catalog-s3" = "magnus_extensions.catalog.s3.integration:LocalContainerCompute"
# S3 run log store
"local-container-run_log_store-s3" = "magnus_extensions.datastore.s3.integration:LocalContainerCompute"
"local-run_log_store-s3" = "magnus_extensions.datastore.s3.integration:LocalCompute"
# AWS secrets manager
"local-container-secrets-aws-secrets-manager" = "magnus_extensions.secrets.aws.integration:LocalContainerCompute"
#KFP executor
"kfp-run_log_store-buffered" = "magnus_extensions.executor.kubeflow.integration:BufferedRunLogStore"
"kfp-run_log_store-file_system" = "magnus_extensions.executor.kubeflow.integration:FileSystemRunLogStore"
"kfp-catalog-file_system" = "magnus_extensions.executor.kubeflow.integration:FileSystemCatalog"
#Argo executor
"argo-run_log_store-buffered" = "magnus_extensions.executor.argo.integration:BufferedRunLogStore"
"argo-run_log_store-file_system" = "magnus_extensions.executor.argo.integration:FileSystemRunLogStore"
"argo-catalog-file_system" = "magnus_extensions.executor.argo.integration:FileSystemCatalog"
# Chunked S3 run log store
"local-container-run_log_store-chunked-s3" = "magnus_extensions.datastore.chunked_s3.integration:LocalContainerCompute"
# K8s PVC run log store
"local-run_log_store-k8spvc" = "magnus_extensions.datastore.k8s_pvc.integration:LocalCompute"
"local-container-run_log_store-k8spvc" = "magnus_extensions.datastore.k8s_pvc.integration:LocalContainerCompute"
"kfp-run-log-store-k8s_pvc" = "magnus_extensions.datastore.k8s_pvc.integration:KfpCompute"
"argo-run-log-store-k8s_pvc" = "magnus_extensions.datastore.k8s_pvc.integration:ArgoCompute"
# Chunked K8s PVC run log store
"local-run_log_store-chunked-k8spvc" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:LocalCompute"
"local-container-run_log_store-chunked-k8spvc" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:LocalContainerCompute"
"kfp-run-log-store-chunked-k8s_pvc" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:KfpCompute"
"argo-run-log-store-chunkled-k8s_pvc" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:ArgoCompute"
# K8s PVC catalog
"local-catalog-k8spvc" = "magnus_extensions.catalog.k8s_pvc.integration:LocalCompute"
"local-container-catalog-k8spvc" = "magnus_extensions.catalog.k8s_pvc.integration:LocalContainerCompute"
"kfp-catalog-k8s_pvc" = "magnus_extensions.catalog.k8s_pvc.integration:KfpCompute"
"argo-catalog-k8s_pvc" = "magnus_extensions.catalog.k8s_pvc.integration:ArgoCompute"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
tag_commit = false
version_source = "tag_only"
major_on_zero = true
commit_version_number = false
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false
