[tool.poetry]
name = "magnus_extensions"
version = "0"
description = "Extensions to Magnus core"
authors = ["Vijay Vammi <mesanthu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "magnus_extensions"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 ={ version = "*", optional = true }
kfp = {version= "^1.8.18", optional = true }
sqlalchemy = { version = "*", optional = true }
kubernetes = { version = "*", optional = true }
magnus = {version = "^0.4.7"}

[tool.poetry.extras]
aws = ["boto3"]
kubeflow = ["kfp"]
k8s = ["kubernetes"]
database = ["sqlalchemy"]

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
mkdocs = "*"
mkdocs-material = "*"
mypy = "^0.931"
tox = "^3.24.5"
pre-commit = "*"
commit-linter = "^1.0.2"
python-semantic-release = "^7.33.1"

# Use this section to provide the namespace to extend and implementation
[tool.poetry.plugins."catalog"]
"s3" = "magnus_extensions.catalog.s3.implementation:S3Catalog"
"k8s-pvc" = "magnus_extensions.catalog.k8s_pvc.implementation:K8sPVCatalog"

[tool.poetry.plugins."run_log_store"]
"s3" = "magnus_extensions.datastore.s3.implementation:S3Store"
"chunked-s3" = "magnus_extensions.datastore.chunked_s3.implementation:ChunkedS3Store"
"k8s-pvc" = "magnus_extensions.datastore.k8s_pvc.implementation:K8PersistentVolumeRunLogstore"
"chunked-k8s-pvc" = "magnus_extensions.datastore.chunked_k8s_pvc.implementation:ChunkedK8PersistentVolumeRunLogstore"

[tool.poetry.plugins."secrets"]
"aws-secrets-manager" = "magnus_extensions.secrets.aws.implementation:AWSSecretsManager"

[tool.poetry.plugins."executor"]
"kfp" = "magnus_extensions.executor.kubeflow.implementation:KubeFlowExecutor"
"argo" = "magnus_extensions.executor.argo.implementation:ArgoExecutor"

# Use this provide namespace of the integration
# naming convention: keep it simple.
[tool.poetry.plugins."magnus.integration.BaseIntegration"]
#S3 catalog
"e1" = "magnus_extensions.catalog.s3.integration:LocalContainerCompute"
# S3 run log store
"e2" = "magnus_extensions.datastore.s3.integration:LocalContainerCompute"
"e3" = "magnus_extensions.datastore.s3.integration:LocalCompute"
# AWS secrets manager
"e4" = "magnus_extensions.secrets.aws.integration:LocalContainerCompute"
#KFP executor
"e5" = "magnus_extensions.executor.kubeflow.integration:BufferedRunLogStore"
"e6" = "magnus_extensions.executor.kubeflow.integration:FileSystemRunLogStore"
"e7" = "magnus_extensions.executor.kubeflow.integration:FileSystemCatalog"
#Argo executor
"e8" = "magnus_extensions.executor.argo.integration:BufferedRunLogStore"
"e9" = "magnus_extensions.executor.argo.integration:FileSystemRunLogStore"
"e10" = "magnus_extensions.executor.argo.integration:FileSystemCatalog"
# Chunked S3 run log store
"e11" = "magnus_extensions.datastore.chunked_s3.integration:LocalContainerCompute"
# K8s PVC run log store
"e12" = "magnus_extensions.datastore.k8s_pvc.integration:LocalCompute"
"e13" = "magnus_extensions.datastore.k8s_pvc.integration:LocalContainerCompute"
"e14" = "magnus_extensions.datastore.k8s_pvc.integration:KfpCompute"
"e15" = "magnus_extensions.datastore.k8s_pvc.integration:ArgoCompute"
# Chunked K8s PVC run log store
"e16" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:LocalCompute"
"e17" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:LocalContainerCompute"
"e18" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:KfpCompute"
"e19" = "magnus_extensions.datastore.chunked_k8s_pvc.integration:ArgoCompute"
# K8s PVC catalog
"e20" = "magnus_extensions.catalog.k8s_pvc.integration:LocalCompute"
"e21" = "magnus_extensions.catalog.k8s_pvc.integration:LocalContainerCompute"
"e22" = "magnus_extensions.catalog.k8s_pvc.integration:KfpCompute"
"e23" = "magnus_extensions.catalog.k8s_pvc.integration:ArgoCompute"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
tag_commit = false
version_source = "tag_only"
major_on_zero = true
commit_version_number = false
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false
