[tool.poetry]
name = "magnus_extension_executor_aws_sfn"
version = "0.1.0"
description = "Magnus extension to generate State Function from a dag definition"
authors = ["Vijay Vammi <vijay.vammi@astrazeneca.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AstraZeneca/magnus-extensions/"
repository = "https://github.com/AstraZeneca/magnus-extensions/"
documentation = "https://astrazeneca.github.io/magnus-extensions/"

[tool.poetry.dependencies]
python = "^3.6.1"
magnus = "^0.2.2"
magnus_extension_aws_config = "*"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
autopep8 = "*"
pylint = "*"
mypy = "^0.931"
tox = "^3.24.5"

# Use this section to provide the namespace to extend and implementation
[tool.poetry.plugins."magnus.executor.BaseExecutor"]
"aws-sfn" = "magnus_extension_executor_aws_sfn.sfn:StateMachineExecutor"

# Use this provide namespace of the integration
# naming convention: {executor.name}-{service}-{service.name}
#[tool.poetry.plugins."magnus.integration.BaseIntegration"]
#"unique_name" = "implementation"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
