[tool.poetry]
name = "magnus_extensions_docs"
version = "0.1.1"
description = "Documentation for magnus extensions"
authors = [ "Vijay Vammi <mesanthu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AstraZeneca/magnus-extensions"
repository = "https://github.com/AstraZeneca/magnus-extensions"
documentation = "https://astrazeneca.github.io/magnus-extensions/"
 

[tool.poetry.dependencies]
python = "^3.6.1"
mkdocs = "*"
mkdocs-material = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
