[tool.poetry]
name = "magnus_extension_kubeflow"
version = "0.1.0"
description = "Kubeflow executor"
authors = ["Vijay Vammi <mesanthu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AstraZeneca/magnus-extensions/"
repository = "https://github.com/AstraZeneca/magnus-extensions/"
documentation = "https://astrazeneca.github.io/magnus-extensions/"

[tool.poetry.dependencies]
python = "^3.8"
magnus = "^0.4.1"
kfp = "^1.8.18"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
autopep8 = "*"
pylint = "*"
mypy = "^0.931"
tox = "^3.24.5"

# Use this section to provide the namespace to extend and implementation
[tool.poetry.plugins."magnus.executor.BaseExecutor"]
"kfp" = "magnus_extension_kubeflow.implementation:KubeFlowExecutor"


# Use this provide namespace of the integration
# naming convention: {executor.name}-{service}-{service.name}
[tool.poetry.plugins."magnus.integration.BaseIntegration"]
"kfp-run_log_store-buffered" = "magnus_extension_kubeflow.integration:KfPComputeBufferedRunLogStore"
"kfp-run_log_store-file_system" = "magnus_extension_kubeflow.integration:KfPComputeFileSystemRunLogStore"
"kfp-catalog-file_system" = "magnus_extension_kubeflow.integration:KfPComputeFileSystemCatalog"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
