[tool.poetry]
name = "magnus_extension_partitioned_run_log_store"
version = "0.1.0"
description = "Magnus extension for partitioned run log store"
authors = ["Vijay Vammi <vijay.vammi@astrazeneca.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AstraZeneca/magnus-extensions/"
repository = "https://github.com/AstraZeneca/magnus-extensions/"
documentation = "https://astrazeneca.github.io/magnus-extensions/"

[tool.poetry.dependencies]
python = "^3.6.1"
magnus = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
autopep8 = "*"
pylint = "*"
mypy = "^0.931"
tox = "^3.24.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
