[tool.poetry]
name = "magnus_extension_catalog_s3"
version = "0.2.0"
description = "Magnus extension to provide S3 Catalog functionality"
authors = ["Vijay Vammi <vijay.vammi@astrazeneca.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AstraZeneca/magnus-extensions/"
repository = "https://github.com/AstraZeneca/magnus-extensions/"
documentation = "https://astrazeneca.github.io/magnus-extensions/"

[tool.poetry.dependencies]
python = "^3.8"
magnus = "^0.4.1"
magnus_extension_aws_config = "^0.2.0"
pydantic = "^1.10.4"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
autopep8 = "*"
pylint = "*"
mypy = "^0.931"
tox = "^3.24.5"

# Use this section to provide the namespace to extend and implementation
[tool.poetry.plugins."magnus.catalog.BaseCatalog"]
"s3" = "magnus_extension_catalog_s3.s3:S3Catalog"

# Use this provide namespace of the integration
# naming convention: {executor.name}-{service}-{service.name}
[tool.poetry.plugins."magnus.integration.BaseIntegration"]
"local-container-catalog-s3" = "magnus_extension_catalog_s3.integration:LocalContainerComputeS3Catalog"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
