[tool.poetry]
name = "magnus_extension_datastore_s3"
version = "0.1.1"
description = "Magnus extension for S3 as run log store"
authors = ["Vijay Vammi <vijay.vammi@astrazeneca.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AstraZeneca/magnus-extensions/"
repository = "https://github.com/AstraZeneca/magnus-extensions/"
documentation = "https://astrazeneca.github.io/magnus-extensions/"

[tool.poetry.dependencies]
python = "^3.7.1"
magnus = "^0.3.11"
magnus_extension_aws_config = "^0.1.1"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
autopep8 = "*"
pylint = "*"
mypy = "^0.931"
tox = "^3.24.5"

# Use this section to provide the namespace to extend and implementation
[tool.poetry.plugins."magnus.datastore.BaseRunLogStore"]
"s3" = "magnus_extension_datastore_s3.s3:S3Store"

# Use this provide namespace of the integration
# naming convention: {executor.name}-{service}-{service.name}
[tool.poetry.plugins."magnus.integration.BaseIntegration"]
"local-container-run_log_store-s3" = "magnus_extension_datastore_s3.integration:LocalContainerComputeS3Store"
"local-run_log_store-s3" = "magnus_extension_datastore_s3.integration:LocalComputeS3RunLogStore"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
